# image-viewer

./: .gitignore  .image-viewer.db  LICENSE  README.md  image-viewer  pyproject.toml
plans/: architecture.md
src/image_viewer/: __init__.py  __main__.py  app.py  config.py  database.py  models.py  scanner.py  slideshow_view.py  sorting.py  thumbnail_cache.py  thumbnail_view.py
